--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -159,7 +159,6 @@ body {
   font-family: 'Roboto Slab', sans-serif;
   font-size: 1.5em;
   font-weight: 500;
-  text-align: center;
   color: inherit;
 }
 
@@ -172,17 +171,30 @@ body {
   background-color: rgb(255, 255, 141);
 }
 
-/* FAKE */
+.main {
+  padding: 0;
+}
+
+.main h1 {
+  font-family: 'Roboto Slab', sans-serif;
+  font-size: 1.5em;
+  font-weight: 500;
+}
+
+#countries {
+  padding-left: 0;
+}
 
 #countries li {
   display: inline-block;
-  width: 250px;
-  margin: 0 0 10px 0;
-  cursor: pointer
+  width: 100%;
+  padding: 10px 0;
+  cursor: pointer;
 }
 
 #countries li.selected {
-  background-color: yellow
+  background-color: rgb(255, 235, 59);
+  color: #222222;
 }
 
 .state {
