--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -293,6 +293,14 @@ body {
 
 @media only screen and (min-width: 480px) {
 
+    #countries li {
+        width: 200px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        padding-right: 5px;
+    }
+
 /* ====================
     INTERMEDIATE: Menu
    ==================== */
